# my_os

./: .gitignore  CMakeLists.txt  README.md
md/: study.md
script/: img-write.sh  qemu-debug.sh
source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
source/comm/: comm.h  cpu_instr.h  elf.h  types.h
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: fs.c  mem.c  syscall.c  task.c
source/kernel/cpu/: cpu.c  irq.c  mmu.c
source/kernel/dev/: console.c  kbd.c  sound.c  time.c
source/kernel/include/core/: fs.h  mem.h  syscall.h  task.h
source/kernel/include/cpu/: cpu.h  irq.h  mmu.h
source/kernel/include/dev/: console.h  kbd.h  sound.h  time.h
source/kernel/include/ipc/: mutex.h  sem.h
source/kernel/include/tool/: bitmap.h  list.h  mem.h
source/kernel/init/: init.c  start.S
source/kernel/ipc/: mutex.c  sem.c
source/kernel/tool/: bitmap.c  list.c  mem.c
source/loader/: CMakeLists.txt  loader.h  loader16.c  loader32.c  start.S
source/shell/: CMakeLists.txt  link.lds  main.c
